add database postgres

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,4 +3,4 @@ twilio.key=${TWILIO_KEY}
 twilio.phone.from=${TWILIO_PHONE_FROM}
 twilio.phone.to=${TWILIO_PHONE_TO}
 
-spring.profiles.active=test
+spring.profiles.active=${APP_PROFILE:test}
